# mlops-mlops-team-3

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.airflow.yml  docker-compose.yml  environment.yml  main.py  pyproject.toml  remote.env.example
.github/workflows/: ci.yml  (+13 more)
.tmp/: eic_temp_key  eic_temp_key.pub
airflow/: Dockerfile.airflow-custom
config/: ec2_schedule_targets.csv
docs/: analyze-by-id-api-guide.md  aws_infra-overview.md  champion-csv-strategy.md  cost-performance-ops-until-0315.md  create-analyze-id-prediction-logs.sql  ec2-cost-optimized-operations.md  fastapi-serving-structure.md  mlops-pipeline-feynman-guide.md  operations-runbook.md  remote-gpu-training.md  rollout-guardrails.md  tylersong_contribution_report.md
models/: rating_model.pt
nginx/: default.conf
scripts/: check_data_change.py  deploy_api_aws.sh  deploy_api_aws_precheck.sh  deploy_api_on_instance.sh  deploy_remote.sh  diagnose_ec2_ssh_deep.sh  diagnose_ec2_ssh_network.sh  ensure_cloudwatch_agent.sh  export_db_to_s3.py  export_infer_to_s3.py  fetch_tmdb_dataset.py  local_api_smoke_test.py  pull_ssm_secrets.py  put_mysql_ssm_params.sh  put_supabase_ssm_params.sh  register_model.py  send_infer_sqs_message.py  send_sqs_message.py  setup_ssm_for_instance.sh  sync_tmdb_to_db.py  test_pr55_improvements.py  update_contribution_badges.py  validate_data_quality.py  verify_staging_e2e.sh
slackbot/: .env.example  .gitignore  README.md  index.ts  manifest.json  package.json
src/: config.py  constants.py
tests/: test_api.py  test_api_predict.py  test_champion_registry.py  test_data_validation.py  test_infer_batch.py  test_predictor.py  test_preprocess.py  test_quality_gate.py  test_reco.py  test_registry_schema.py  test_run_batch_infer.py  test_s3_io.py  test_sqs_payload_integration.py  test_train_metadata.py  test_trainer.py
(+44 files in other folders)
